2002-01-27  Alexander Larsson  <alla@lysator.liu.se>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	Draw alpha-blended rounded rectangles around selected text even
	in non-aa mode.

	* libnautilus-private/nautilus-icon-container.c:
	Use the new EelCanvasRect item for selection rectangle in
	non-aa mode.
	Also make sure we never raise anything above the selection
	rectangle item. This means we can remove the
	gnome_canvas_item_raise_to_top() in rubberband_timeout_callback,
	which is good, since that call redraws the whole selection
	rectangle if something was above it.

2002-01-27  Anders Carlsson  <andersca@gnu.org>

	* src/file-manager/fm-properties-window.c (attach_label): Add selectable argument.
	(attach_value_label): set selectable to TRUE.
	(attach_ellipsizing_value_label): Likewise.
	(attach_title_field): set selectable to FALSE.

2002-01-23  Anders Carlsson  <andersca@gnu.org>

	* libnautilus/nautilus-view-standard-main.c (delayed_quit_timeout_callback): 
	Use gtk_main_quit.

2002-01-25  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-bookmark.c
	(nautilus_bookmark_set_name): return a 'changed'
	boolean.

	* src/nautilus-window-manage-views.c
	(update_title): only re-send history if it changed.

	* src/nautilus-window.c (add_to_history_list): prune
	the end of the list more succinctly, don't fire
	send_history_list_changed if we didn't change the list.

2002-01-24  Darin Adler  <darin@bentspoon.com>

	GNOME2_CONVERSION_COMPLETE eradication campaign

	* libnautilus-private/nautilus-icon-factory.c: (cache_icon_new):
	No last_unref_handler any more.
	(cache_icon_unref): Just keep one ref for the factory, just like
	in the old days, since we don't have a "last_unref_handler" any
	more.
	(nautilus_icon_factory_possibly_free_cached_icon): Look at
	ref_count rather than looking at "outstanding" flag.
	(nautilus_icon_factory_get_pixbuf_for_icon): Just ref, no fancy
	"oustanding" logic.
	(embed_text): Rewrite to use Pango.
	