@@ -1,3 +1,10 @@
+2002-01-27  Darin Adler  <darin@bentspoon.com>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	(draw_or_measure_label_text), (draw_stretch_handles): Formatting tweaks.
+	* libnautilus-private/nautilus-icon-container.c: (icon_raise): Use new
+	eel_gnome_canvas_item_send_behind.
+
 2002-01-27  Alexander Larsson  <alla@lysator.liu.se>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c:
